force-app/main/default/objects/Account/fields/Test_External__c.field-meta.xml
<CustomField>
    <fullName>Test_External__c</fullName>
    <externalId>true</externalId>
    <label>Test External</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>