force-app/main/default/objects/Account/listViews/CMS_Content_view.listView-meta.xml
<ListView>
    <fullName>CMS_Content_view</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>CMS Content view</label>
</ListView>